--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,7 +26,15 @@
     -->
     <title>MySchoolPlan</title>
   </head>
-  <body>
+  <body >
+    <style>
+      /* Stilizare pentru întregul corp al paginii */
+      body {
+          font-family: Arial, sans-serif;
+          margin: 0;
+          padding: 0;
+      }
+      </style>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
